--- a/src/Modules/Laser.Orchard.RazorScripting/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.RazorScripting/App_Data/Localization/it-IT/orchard.module.po
@@ -1,5 +1,5 @@
 ﻿# Orchard resource strings - it-IT
-# Copyright (c) 2023 Laser s.r.l.
+# Copyright (c) 2024 Laser s.r.l.
 
 
 # > #: msgctxt { contesto del messaggio - Originale }
@@ -7,6 +7,34 @@
 # > msgctxt  "{ contesto del messaggio }"
 # > msgid "{ identificativo del messaggio }"
 # > msgstr "{ messaggio }"
+
+msgctxt "~/Modules/Laser.Orchard.RazorScripting/Views/DefinitionTemplates/RazorScriptingFieldSettingsEventsViewModel.cshtml"
+msgid "Display script"
+msgstr "Display script"
+
+msgctxt "~/Modules/Laser.Orchard.RazorScripting/Views/DefinitionTemplates/RazorScriptingFieldSettingsEventsViewModel.cshtml"
+msgid "Editor Build script"
+msgstr "Editor Build script"
+
+msgctxt "~/Modules/Laser.Orchard.RazorScripting/Views/DefinitionTemplates/RazorScriptingFieldSettingsEventsViewModel.cshtml"
+msgid "Editor Update script"
+msgstr "Editor Update script"
+
+msgctxt "~/Modules/Laser.Orchard.RazorScripting/Views/DefinitionTemplates/RazorScriptingFieldSettingsEventsViewModel.cshtml"
+msgid "In all scripts for this field, you can use Model.ContentItem, Model.OrchardServices, Model.T(), Model.Tokens."
+msgstr "In tutti gli script per questo field, puoi usare Model.ContentItem, Model.OrchardServices, Model.T(), Model.Tokens."
+
+msgctxt "~/Modules/Laser.Orchard.RazorScripting/Views/DefinitionTemplates/RazorScriptingFieldSettingsEventsViewModel.cshtml"
+msgid "The script to run everytime the content item is about to be displayed. IMPORTANT NOTE: this includes every attempt to display the content, so also summaries in the backend. If the script returns a NOT empty string, it will be logged as an error."
+msgstr "Questo script viene eseguito ogni volta in cui il contenuto sta per essere visualizzato. IMPORTANTE: questo include ogni tentativo di visualizzare il contenuto, quindi anche le Summary nel back-office. Se lo script ritorna una stringa NON vuota, verrà loggato come un errore."
+
+msgctxt "~/Modules/Laser.Orchard.RazorScripting/Views/DefinitionTemplates/RazorScriptingFieldSettingsEventsViewModel.cshtml"
+msgid "The script to run everytime the content item is building its editor shape. If the script returns a NOT empty string, it will be used to notify the backend user."
+msgstr "Questo script viene eseguito ogni volta che il contenuto sta eseguendo la fase di costruzione della sua editor shape. Se lo script ritorna una stringa NON vuota, questa verrà utilizzata per visualizzare una notifica per l'utente di back-office."
+
+msgctxt "~/Modules/Laser.Orchard.RazorScripting/Views/DefinitionTemplates/RazorScriptingFieldSettingsEventsViewModel.cshtml"
+msgid "The script to run everytime the content item is edited (saved/published). If the script returns a NOT empty string, it will be interpreted as a validation error."
+msgstr "Questo script viene eseguito ogni volta che il contenuto è modificato (salvato o pubblicato). Se lo script ritorna una stringa NON vuota, questa verrà interpretata con un errore di validazione."
 
 msgctxt "~/Modules/Laser.Orchard.RazorScripting/Views/DefinitionTemplates/RazorValidationPartSettings.cshtml"
 msgid "Script"
@@ -63,4 +91,8 @@ msgstr "Lo script da eseguire ogni volta che il Razor Decision Activity è invoc
 msgctxt "Laser.Orchard.RazorScripting.Forms.RazorDecisionForms"
 msgid "You must provide a Script"
 msgstr "È necessario fornire uno Script"
+
+msgctxt "Laser.Orchard.RazorScripting.Handlers.RazorScriptingHandler"
+msgid "Error executing DisplayScript in {0}: {1}"
+msgstr "Errore durante l'esecuzione del DisplayScript in {0}: {1}"
 
